--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
     <meta
       name="description"
-      content="Welcome to my portfolio website. I am a front-end web developer and I specialize in creating user-friendly, responsive and accessible websites. Explore my projects, open-source work and contact me for any inquiries or collaborations."
+      content="Welcome to my portfolio website. I am a Mechatronics engineering fresh-graduate and an AI and data science enthusiast. Explore my projects, open-source work and contact me for any inquiries or collaborations."
     />
 
     <!-- Google / Search Engine Tags -->
 <meta itemprop="name" content="Syed Mohsin's Portfolio">
-<meta itemprop="description" content="Welcome to my portfolio website. I am a front-end web developer and I specialize in creating user-friendly, responsive and accessible websites. Explore my projects, open-source work and contact me for any inquiries or collaborations.">
+<meta itemprop="description" content="Welcome to my portfolio website. I am a Mechatronics engineering fresh-graduate and an AI and data science enthusiast. Explore my projects, open-source work and contact me for any inquiries or collaborations.">
 
 <!-- Reference screenshot of updated site's header in place of content -->
 <meta itemprop="image" content="assets/images/sharing-card.png">
@@ -37,7 +37,7 @@
 <meta property="og:url" content="https://ossportfolio.netlify.app">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Syed Mohsin's Portfolio">
-<meta property="og:description" content="Welcome to my portfolio website. I am a front-end web developer and I specialize in creating user-friendly, responsive and accessible websites. Explore my projects, open-source work and contact me for any inquiries or collaborations.">
+<meta property="og:description" content="Welcome to my portfolio website. I am a Mechatronics engineering fresh-graduate and an AI and data science enthusiast. Explore my projects, open-source work and contact me for any inquiries or collaborations.">
 
 <!-- Reference screenshot of updated site's header in content -->
 <meta property="og:image" content="assets/images/sharing-card.png">
@@ -45,7 +45,7 @@
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Syed Mohsin's Portfolio">
-<meta name="twitter:description" content="Welcome to my portfolio website. I am a front-end web developer and I specialize in creating user-friendly, responsive and accessible websites. Explore my projects, open-source work and contact me for any inquiries or collaborations.">
+<meta name="twitter:description" content="Welcome to my portfolio website. I am a Mechatronics engineering fresh-graduate and an AI and data science enthusiast. Explore my projects, open-source work and contact me for any inquiries or collaborations.">
 
 <!-- Reference screenshot of updated site's header in content -->
 <meta name="twitter:image" content="assets/images/sharing-card.png">
