--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <script src="script.js" defer></script>
 
     <!-- Your name here -->
-    <title>Syed Mohsin's Portfolio</title>
+    <title>Mohamed Elnageeb's Portfolio</title>
   </head>
 
   <body>
@@ -106,14 +106,14 @@
         <div class="header-textbox">
           <!-- Replace with your name and job title -->
           <h1 class="h1">
-            <span>Hi, I'm Syed Mohsin</span>
-            <span>Frontend Web Developer</span>
+            <span>Hi, I'm Mohamed Elnageeb</span>
+            <span>Mechatronics engineer</span>
           </h1>
 
           <!-- Add a small introductory paragraph about yourself -->
           <p class="header-text">
-            A frontend software engineer and interface designer who builds UX
-            rich accessible and performant websites.
+            Mechatronics engineering fresh-graduate 
+            and an AI and data science enthusiast
           </p>
 
           <div class="header-btns">
